--- a/provinceszipped.ipynb
+++ b/provinceszipped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f124ba21-6325-406f-87e7-066f8e9ddb35",
    "metadata": {},
    "outputs": [
@@ -14,13 +14,71 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n",
+      "C:\\Users\\faiaz\\AppData\\Local\\Temp\\ipykernel_12956\\2324828252.py:66: DeprecationWarning:\n",
+      "\n",
+      "The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8053/\"\n",
+       "            src=\"http://127.0.0.1:8000/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -28,7 +86,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x26d837bba90>"
+       "<IPython.lib.display.IFrame at 0x1df0406b7d0>"
       ]
      },
      "metadata": {},
@@ -120,6 +178,8 @@
     "# ---------------------------\n",
     "# Initialize Dash App\n",
     "# ---------------------------\n",
+    "\n",
+    "\n",
     "app = dash.Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
@@ -134,6 +194,9 @@
     "    dcc.Store(id='clicked-markers', data=[]),\n",
     "    dcc.Graph(id='choropleth-map')\n",
     "])\n",
+    "\n",
+    "server = app.server #Important for gunicorn.\n",
+    "\n",
     "\n",
     "# ---------------------------\n",
     "# Callback: Update Clicked Markers List\n",
@@ -222,13 +285,21 @@
     "    return fig\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True, port=8053)"
+    "    app.run_server(debug=True)\n",
+    "\n",
+    "#if __name__ == '__main__':\n",
+    " #   app.run_server(port=8051, debug=False)\n",
+    "\n",
+    "# (Optional) local dev fallback:\n",
+    "#if __name__ == '__main__':\n",
+    " #   port = int(os.environ.get('PORT', 8000))\n",
+    "  #  app.run_server(host='127.0.0.1', port=port, debug=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ab33c3-9ce7-4306-9f06-7dce1a65ecd3",
+   "id": "0a28d871-925f-4922-b384-80ed1d74080e",
    "metadata": {},
    "outputs": [],
    "source": []
